Correcting header small image display on small screens

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -138,10 +138,10 @@ h4 {
   margin: 5px;
   padding: 5px;
 }
-
+ 
 #bottom-right-image {
   margin-top: 15px;
-}
+} 
 
 /* Homepage - About Section */
 
@@ -220,10 +220,6 @@ footer {
     font-size: 1rem;
   }
 
-  .homepage-sml-img {
-    margin-top: 15px;
-  }
-
   /* View Recipe Page */
 
   .recipe_details {
@@ -237,4 +233,11 @@ footer {
   .recipe-info-text {
     order: 2;
   }
+}
+
+@media only screen and (max-width: 600px) {
+.homepage-sml-img {
+    margin-top: 15px;
+  }
+
 }
